fix background shift bug

--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ p {
 
 .overlay {
   display: none;
-  position: absolute;
   top: 8px;
   left: 8px;
   width: 100%;
